plugins {
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
    id 'org.parchmentmc.librarian.forgegradle' version '1.+'
    id 'org.spongepowered.mixin' version '0.7.+'
    id 'dev.vfyjxf.modaccessor' version "1.2.1"
}

version = minecraft_version + "-" + mod_version + "-" + mod_version_tag
group = mod_group_id

base {
    archivesName = mod_name + "-" + mod_platform
}



println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"

modAccessor {
    createTransformConfiguration(configurations.compileOnly)
    accessTransformerFiles = project.files('src/main/resources/META-INF/accesstransformer.cfg')
}

minecraft {
    mappings channel: mapping_channel, version: mapping_version
    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
    copyIdeResources = true

    runs {

        configureEach {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'

            property 'forge.logging.console.level', 'debug'

            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }

        client {
             property 'forge.enabledGameTestNamespaces', mod_id
        }

        server {
            property 'forge.enabledGameTestNamespaces', mod_id
        }

        gameTestServer {
            property 'forge.enabledGameTestNamespaces', mod_id
        }

        data {
            workingDirectory project.file('run-data')

             args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    maven {
        url 'https://modmaven.dev/'
    }
    maven {
        name 'modmaven'
        url "https://modmaven.dev/"
        content {
            includeGroup "mezz.jei"
        }
    }

    maven {
        name 'cursemaven'
        url "https://www.cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
    maven {
        name = "Modrinth"
        url = "https://api.modrinth.com/maven"
    }
    maven {
        url = "https://maven.theillusivec4.top"
    }
    maven {
        url = "https://repo.spongepowered.org/repository/maven-public"
    }
    maven {
        name 'DVS1 Maven FS'
        url = "https://dvs1.progwml6.com/files/maven"
        
    }
    maven {
        url = "https://maven.nova-committee.cn/releases"
    }
    maven { // location of the maven for Registrate
        name = 'tterrag maven'
        url = "https://maven.tterrag.com/"
    }
    maven { // location of the maven for Flywheel and Ponder
        url = "https://maven.createmod.net"
    }
    maven {
        name = "Thermal Maven"
        url = uri("https://maven.covers1624.net/")
    }
    maven {
        name = 'GTCEu Maven'
        url = 'https://maven.gtceu.com'
        content {
            includeGroup 'com.gregtechceu.gtceu'
        }
    }
    maven {
        name 'FirstDarkDev'
        url "https://maven.firstdark.dev/snapshots/"
    }
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
    //Avaritia
    implementation fg.deobf("curse.maven:re-avaritia-623969:7290362")
    //JEI
    compileOnly fg.deobf("mezz.jei:jei-${minecraft_version}-common-api:${jei_version}")
    compileOnly fg.deobf("mezz.jei:jei-${minecraft_version}-forge-api:${jei_version}")
    runtimeOnly fg.deobf("mezz.jei:jei-${minecraft_version}-forge:${jei_version}")
    //Refined Storage
    implementation fg.deobf("curse.maven:refined-storage-243076:${refined_Storage_version}")
    //Thermal Expansion
    implementation fg.deobf("curse.maven:thermal-expansion-69163:${thermal_expansion_version}")
    //Thermal Foundation
    implementation fg.deobf("curse.maven:thermal-foundation-222880:${thermal_foundation_version}")
    //CoFH Core
    implementation fg.deobf("curse.maven:cofh-core-69162:${cofh_core_version}")
    //Create
    implementation fg.deobf("curse.maven:create-328085:${create_version}")
    implementation fg.deobf("net.createmod.ponder:Ponder-Forge-1.20.1:1.0.80")
    compileOnly fg.deobf("com.tterrag.registrate:Registrate:MC1.20-1.3.3")
    compileOnly fg.deobf("dev.engine-room.flywheel:flywheel-forge-api-1.20.1:1.0.6-beta-266")
    compileOnly fg.deobf("curse.maven:createaddition-439890:7208610")
//    runtimeOnly fg.deobf("curse.maven:createaddition-439890:7208610")
    //PneumaticCraft: Repressurized
    implementation fg.deobf("curse.maven:pneumaticcraft-repressurized-281849:${pneumaticcraft_repressurized_version}")
    //Botania
    accessCompileOnly fg.deobf("curse.maven:botania-225643:${botania_version}")
    implementation fg.deobf("curse.maven:botania-225643:${botania_version}")
    //Ender IO
    implementation fg.deobf("curse.maven:ender-io-64578:${ender_io_version}")
    //Mekanism
    implementation fg.deobf("mekanism:Mekanism:${mekanism_version}")
    runtimeOnly fg.deobf("mekanism:Mekanism:${mekanism_version}:additions")//Additions
    implementation fg.deobf("mekanism:Mekanism:${mekanism_version}:generators")//Generators
    runtimeOnly fg.deobf("mekanism:Mekanism:${mekanism_version}:tools")//Tools
    //Emek
    runtimeOnly fg.deobf("curse.maven:iglee-library-541199:6987117")
    implementation fg.deobf("curse.maven:evolved-mekanism-1230085:7599591")
    //Blood Magic
    implementation fg.deobf("maven.modrinth:blood-magic:${blood_magic_version}")
    //Applied Energistics
    implementation fg.deobf("curse.maven:applied-energistics-2-223794:${applied_energistics_version}")
    //GuideME
    implementation fg.deobf("curse.maven:guideme-1173950:${guideme_version}")
    //Patchouli
    implementation fg.deobf("curse.maven:patchouli-306770:${patchouli_version}")
    //Curios
    implementation fg.deobf("curse.maven:curios-309927:${curios_version}")
    //Jade
    implementation fg.deobf("curse.maven:jade-324717:${jade_version}")
    //SlashBlade
    implementation fg.deobf("curse.maven:slashblade-resharped-1022428:${slash_blade_version}")
    //TConstruct
    implementation fg.deobf("slimeknights.mantle:Mantle:1.20.1-1.11.95")
    implementation fg.deobf("slimeknights.tconstruct:TConstruct:1.20.1-3.11.0.148")
    //Titanium
    implementation fg.deobf("curse.maven:titanium-287342:${titanium_version}")
    //Industrial Foregoing
    implementation fg.deobf("curse.maven:industrial-foregoing-266515:${industrial_foregoing_version}")
    //Thermal Core
    implementation fg.deobf("com.teamcofh:thermal_core:${minecraft_version}-${thermalCoreVersion}.+")
    //Mystical Agriculture
    implementation fg.deobf("curse.maven:mystical-agriculture-246640:${mysticalAgricultureVersion}")
    //Mystical Agradditions
    implementation fg.deobf("curse.maven:mystical-agradditions-256247:${mysticalAgradditionsVersion}")
    //Cucumber
    implementation fg.deobf("curse.maven:cucumber-272335:${cucumberVersion}")
    //Mixin
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:[0.4.1,0.5.0)"))
    implementation(jarJar("io.github.llamalad7:mixinextras-forge:[0.4.1,0.5.0)"))

    compileOnly fg.deobf("com.gregtechceu.gtceu:gtceu-${minecraft_version}:${gtceu_version}:slim") { transitive = false }
    runtimeOnly fg.deobf("com.gregtechceu.gtceu:gtceu-${minecraft_version}:${gtceu_version}:slim") { transitive = false }
    implementation fg.deobf("com.lowdragmc.ldlib:ldlib-forge-${minecraft_version}:${ldlib_version}") { transitive = false }
    implementation fg.deobf("dev.toma.configuration:configuration-forge-${minecraft_version}:${configuration_version}")
}

tasks.named('processResources', ProcessResources).configure {
    var replaceProperties = [
            minecraft_version: minecraft_version, minecraft_version_range: minecraft_version_range,
            forge_version: forge_version, forge_version_range: forge_version_range,
            loader_version_range: loader_version_range,
            mod_id: mod_id, mod_name: mod_name, mod_license: mod_license, mod_version: mod_version,
            mod_authors: mod_authors, mod_description: mod_description,
            tconstruct_range: tconstruct_range
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties + [project: project]
    }
}


tasks.named('jar', Jar).configure {
    manifest {
        attributes([
                'Specification-Title'     : mod_id,
                'Specification-Vendor'    : mod_authors,
                'Specification-Version'   : '1',
                'Implementation-Title'    : project.name,
                'Implementation-Version'  : project.jar.archiveVersion,
                'Implementation-Vendor'   : mod_authors,
                'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }


    finalizedBy 'reobfJar'
}


publishing {
    publications {
        maven(MavenPublication) {
            groupId = project.group
            artifactId = project.mod_id + "-" + project.mod_platform
            version = project.version

            artifact jar
        }
    }
    repositories {
        maven {
            name = "Local"
            url = file("build/repo").toURI()
        }
        maven {
            name 'Releases'
            url = 'https://maven.nova-committee.cn/releases'

            credentials {
                username System.getenv('MAVEN_USERNAME')
                password System.getenv('MAVEN_PASSWORD')
            }
        }
    }
}


mixin {
    add(sourceSets.main, "${mod_id}.refmap.json")
    config "${mod_id}.mixins.json"
}
jar {
    manifest {
        attributes([
                "MixinConfigs"          : "${mod_id}.mixins.json"
        ])
    }
}

def runJava = javaToolchains.launcherFor {
    languageVersion = JavaLanguageVersion.of(17)
}
tasks.withType(JavaExec).configureEach {
    javaLauncher = runJava
}
tasks.withType(Test).configureEach {
    javaLauncher = runJava
}
tasks.withType(JavaCompile).configureEach {
    options.release = 17
    options.encoding = 'UTF-8'
}
